--- a/a1-data-wrangling.Rmd
+++ b/a1-data-wrangling.Rmd
@@ -27,7 +27,7 @@ url_template <- paste0(
   params$number, '.zip')
 ```
 
-```{r child = "_rheader.Rmd"}
+```{r child = "_aheader.Rmd"}
 ```
 
 # 1. Software 
