--- a/c10-doe.Rmd
+++ b/c10-doe.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c10-doe"
+  class: "10-doe"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
