--- a/c14-heterogeneity.Rmd
+++ b/c14-heterogeneity.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c14-heterogeneity"
+  class: "14-heterogeneity"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
