--- a/c15-exam-solutions.Rmd
+++ b/c15-exam-solutions.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c15-exam-solutions"
+  class: "15-exam-solutions"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
