--- a/c3-rmd-plotting.Rmd
+++ b/c3-rmd-plotting.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c3-rmd-plotting"
+  class: "3-rmd-plotting"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
