--- a/c4-formr.Rmd
+++ b/c4-formr.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c4-formr"
+  class: "4-formr"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
