--- a/c6-conjoint-questions.Rmd
+++ b/c6-conjoint-questions.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c6-conjoint-questions"
+  class: "6-conjoint-questions"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
