--- a/c7-utility.Rmd
+++ b/c7-utility.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c7-utility"
+  class: "7-utility"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
