--- a/c8-mle.Rmd
+++ b/c8-mle.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c8-mle"
+  class: "8-mle"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
