--- a/c9-uncertainty.Rmd
+++ b/c9-uncertainty.Rmd
@@ -5,7 +5,7 @@ output:
     number_sections: false
     toc: no
 params:
-  class: "c9-uncertainty"
+  class: "9-uncertainty"
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
