--- a/a2-plotting.Rmd
+++ b/a2-plotting.Rmd
@@ -3,9 +3,58 @@ title: "Plotting"
 output:
   html_document:
     toc: false
+    number_sections: false
 params:
   number: 2
-  purpose: 'purpose'
+  purpose: 'The purpose of this assignment is to get familiar with creating plots using the ggplot2 library and to introduce you to the "RMarkdown" file format.'
 ---
 
-Coming soon!
+```{r child = "_knitr_setup.Rmd"}
+```
+
+```{r echo=FALSE}
+library(tidyverse)
+library(fontawesome)
+
+due <- get_schedule() %>%
+  mutate(assign_due = format(assign_due, format = "%b %d")) %>%
+  filter(assign_n == params$number) %>%
+  pull(assign_due)
+due <- paste0(due, " by 11:59pm")
+
+url_template <- paste0(
+  'https://madd.seas.gwu.edu/2021-Fall/templates/reflection',
+  params$number, '.zip')
+```
+
+```{r child = "_aheader.Rmd"}
+```
+
+# 1. Getting Organized
+
+Download and edit [this template](`r url_template`) when working through this assignment. Notice that this week's template is a .Rmd file.
+
+# 2. Readings
+
+Open up a notebook (physical, digital...whatever you take notes in best), and **take notes** while you go through these readings:
+
+1. Lesson [5 "Data Visualization"](https://jhelvy.github.io/r4aPrimer/L5-data-visualization.html) 
+2. Lesson [6 "Reproducible Reporting"](https://jhelvy.github.io/r4aPrimer/L6-reproducible-reporting.html)
+
+# 3. Exercises
+
+Running through these RStudio Primer exercises to practice making charts with ggplot - we'll do more of this in class next week:
+
+1. [Histograms](https://rstudio.cloud/learn/primers/3.3)
+2. [Bar Charts](https://rstudio.cloud/learn/primers/3.2)
+3. [Scatterplots](https://rstudio.cloud/learn/primers/3.5)
+4. [Line Charts](https://rstudio.cloud/learn/primers/3.6)
+
+# 4. Reflect, Knit, & Submit
+
+Reflect on what you've learned while going through these readings and exercises. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? After reflecting, do the following:
+
+- Write a few sentences in the template you downloaded for this assignment.
+- Click the "knit" button to compile your .Rmd file into a html web page. 
+- Open up the resulting reflection.html file in your web browser and see how it looks!
+- Create a zip file of everything in your R Project folder and submit the zip file in the "Assignment Submission" page on Blackboard.
