--- a/p2-survey-plan.Rmd
+++ b/p2-survey-plan.Rmd
@@ -2,11 +2,71 @@
 title: "Survey Plan"
 output:
   html_document:
+    toc: true
+    toc_float: true
+    toc_level: 2
     number_sections: false
-    toc: no
+params:
+  number: 2
+  weight: '4%'
+  purpose: 'purpose'
+  assessment: 'Your survey plan will be assessed using [this rubric](project/survey_plan/rubric.html){target="_blank"}.'
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
 ```
 
-Coming soon!
+```{r echo=FALSE}
+library(tidyverse)
+
+due <- get_schedule() %>%
+  mutate(project_due = format(project_due, format = "%b %d")) %>%
+  filter(project_n == params$number) %>%
+  pull(project_due)
+due <- paste0(due, " by 11:59pm")
+```
+
+```{r child = "_pheader.Rmd"}
+```
+
+As a team, write a **survey plan** to guide your survey design in formr. This plan does not have to be "set in stone" but rather a first attempt at defining the scope and general content of your survey. The course instructor will review and grade your plan and provide written feedback to guide the development of your pilot survey. Follow the instructions below to prepare your survey plan.
+
+## 1. Get Organized
+
+Download and unzip [this template](templates/project_survey_plan.zip) for your survey plan. Open the `survey_plan.Rproj` file and write your plan in the `survey_plan.Rmd` file. The template comes with some text and code explaining how to use it - you should delete this code / text as it is only for explanatory purposes. Be sure to adjust the content in the YAML:
+
+- Write your project title in the `title` field (and provide a subtitle if you wish, or delete the `subtitle` field).
+ - In the `author` field, list the names of all teammates, e.g. `author: Luke Skywalker, Leia Organa, and Han Solo`.
+
+## 2. Specify the Target Population
+
+Who do you plan on surveying? What is the ideal population you would like to take your survey, and do you have a distribution network in mind to field your survey? By default, we will pay users on Amazon Mechanical Turk (i.e. people from the general U.S. population) to take your survey, but if a specific subpopulation is
+required (e.g. people currently shopping for a car), list that here. If you have any other opportunities to distribute your survey to the target population (e.g. an external collaborator, personal networks, etc.), list those here.
+
+## 3. Specify the Conjoint Questions
+
+Write the exact conjoint choice question you plan on asking your respondents (e.g. "If these were your only options, which vehicle would you choose?").
+
+List in a table the attributes and levels you will include in your conjoint questions (these may change between now and the actual final survey). For example, for a survey on car preferences, here are some possible attributes and levels:
+
+Attribute | Levels | Unit
+----------|--------|--------
+Price | 15, 20, 25 | $1000
+Fuel economy | 20, 25, 30 | Miles per gallon
+Acceleration time | 6, 7, 8 | Seconds (from 0-60 mph)
+Powertrain | Gasoline, Electric | Type
+
+## 4. Specify Other Survey Content
+
+Your survey plan should include the following additional content (much of this will go directly into your pilot survey):
+
+- **Welcome page text**: Welcome your survey respondents and inform them in just a few sentences who you are and what the survey is about.
+- **Consent page text**: Write out the text of a consent form and include restrictions at least for 18 years of age and the statement "I have read and understand the above information" (in your survey, this can go on the welcome page).
+- **Eligibility questions**: Write out your eligibility requirements. Are you looking for a specific audience, or can anyone take your survey? Be specific. Write the exact question language you plan to use in your survey (e.g. "Are you a car owner?") to identify the target sample. You may need to ask more than one question.
+- **Education information**: Write out descriptions of the attributes you will include in your conjoint questions so that you can explain them to your survey respondents. Use common, simple language and as few words as possible. Include illustrative images if possible.
+- **Critical respondent information**: What pieces of information about your respondent are absolutely necessary for your analysis (e.g. demographic factors like income, age, etc., or other information specific to the market for your product). Again, write the specific questions you plan on asking.
+- **Other questions**: What other information about your respondents would be helpful in your analysis? Are you planning on asking any behavioral or demographic questions? Include the specific question text you plan to include.
+
+## 5. Knit and submit
+
+Click the "knit" button to compile your `survey_plan.Rmd` file into a html web page, then create a zip file of everything in your R Project folder. Go to the "Assignment Submission" page on Blackboard and submit your zip file under "Project: Survey Plan". **Only one person from your team should submit the report.**
