--- a/p2-survey-plan.Rmd
+++ b/p2-survey-plan.Rmd
@@ -40,8 +40,11 @@ Download and unzip [this template](templates/project_survey_plan.zip) for your s
 
 ## 2. Specify the Target Population
 
-Who do you plan on surveying? What is the ideal population you would like to take your survey, and do you have a distribution network in mind to field your survey? By default, we will pay users on Amazon Mechanical Turk (i.e. people from the general U.S. population) to take your survey, but if a specific subpopulation is
-required (e.g. people currently shopping for a car), list that here. If you have any other opportunities to distribute your survey to the target population (e.g. an external collaborator, personal networks, etc.), list those here.
+What is the ideal population you would like to take your survey? If you cannot access this population, is there a different or similar population that you are planning to target?
+
+Write out your eligibility requirements for people to be considered part of your target population. Be specific. Write the exact question language you plan to use in your survey (e.g. "Are you a car owner?") to identify the target sample. You may need to ask more than one question.
+
+By default, we will pay users on Amazon Mechanical Turk (i.e. people from the general U.S. population) to take your survey, but if a specific subpopulation is required (e.g. people currently shopping for a car), list that here and perhaps one or two strategies for reaching that population. If you have any other opportunities to distribute your survey to the target population (e.g. an external collaborator, personal networks, etc.), list those here.
 
 ## 3. Specify the Conjoint Questions
 
@@ -62,7 +65,6 @@ Your survey plan should include the following additional content (much of this w
 
 - **Welcome page text**: Welcome your survey respondents and inform them in just a few sentences who you are and what the survey is about.
 - **Consent page text**: Write out the text of a consent form and include restrictions at least for 18 years of age and the statement "I have read and understand the above information" (in your survey, this can go on the welcome page).
-- **Eligibility questions**: Write out your eligibility requirements. Are you looking for a specific audience, or can anyone take your survey? Be specific. Write the exact question language you plan to use in your survey (e.g. "Are you a car owner?") to identify the target sample. You may need to ask more than one question.
 - **Education information**: Write out descriptions of the attributes you will include in your conjoint questions so that you can explain them to your survey respondents. Use common, simple language and as few words as possible. Include illustrative images if possible.
 - **Critical respondent information**: What pieces of information about your respondent are absolutely necessary for your analysis (e.g. demographic factors like income, age, etc., or other information specific to the market for your product). Again, write the specific questions you plan on asking.
 - **Other questions**: What other information about your respondents would be helpful in your analysis? Are you planning on asking any behavioral or demographic questions? Include the specific question text you plan to include.
