--- a/_aheader.Rmd
+++ b/_aheader.Rmd
@@ -1,3 +1,18 @@
+```{r echo=FALSE}
+library(tidyverse)
+library(fontawesome)
+
+due <- get_schedule() %>%
+  mutate(assign_due = format(assign_due, format = "%b %d")) %>%
+  filter(assign_n == params$number) %>%
+  pull(assign_due)
+due <- paste0(due, " by 11:59pm")
+
+url_template <- paste0(
+  'https://madd.seas.gwu.edu/2021-Fall/templates/reflection',
+  params$number, '.zip')
+```
+
 > **Due**: `r due`
 >
 > **Weight**: This assignment is worth 3% of your final grade.
