--- a/a5-estimation.Rmd
+++ b/a5-estimation.Rmd
@@ -3,9 +3,41 @@ title: "Estimation"
 output:
   html_document:
     toc: false
+    number_sections: false
 params:
   number: 5
-  purpose: 'purpose'
+  purpose: "The purpose of this assignment is to introduce the concept of maximum likelihood estimation, which is the estimation approach we'll be using in class to estimate our choice models."
 ---
 
-Coming soon!
+```{r child = "_knitr_setup.Rmd"}
+```
+
+```{r child = "_aheader.Rmd"}
+```
+
+# 1. Getting Organized
+
+Download and edit [this template](`r url_template`) when working through this assignment.
+
+# 2. Readings
+
+Last week we introduced the concept of utility models, which is the primary theoretical framework we'll be using to construct our choice models.
+
+This week, we'll be learning about how we estimate the unknown parameters of those models by watching the second video in [our Youtube playlist](https://www.youtube.com/playlist?list=PLzFdSE-D7jUQnbczxdjohRqlBBrrsaFFg) on choice modeling: _Maximum Likelihood Estimation & Optimization_
+
+**Take notes** as you watch the video. Throughout the video, I ask practice questions at several places - you should answer to those questions as part of your reflection. You may submit your answers however you wish, e.g. hand-write them on paper and take a picture and / or type answers in your reflection .Rmd file.
+
+Click [here](content/slides_mle_optimization.pdf) to download the slides in the video as a PDF.
+
+<center>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/myeAGFTKYkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+# 3. Reflect, Knit, & Submit
+
+Reflect on what you've learned and any questions or points of confusion you have about optimization or maximum likelihood estimation. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? After reflecting, do the following:
+
+- Write a few sentences in the template you downloaded for this assignment.
+- Click the "knit" button to compile your .Rmd file into a html web page.
+- Open up the resulting `reflection5.html` file in your web browser and see how it looks!
+- Create a zip file of everything in your R Project folder and submit the zip file in the "Assignment Submission" page on Blackboard.
